--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles/architects.css">
     <title>G3 Architects</title>
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+        <h3 class="brand">G3 Architects</h3>
     </header>
     <main>
 
